Updated comments on CMakeLists.txt

--- a/C++/Elevador/CMakeLists.txt
+++ b/C++/Elevador/CMakeLists.txt
@@ -3,10 +3,12 @@ project(teste VERSION 0.1 LANGUAGES CXX )
 
 #include_directories( include )
 
-#To build type -> cmake .
-#Then -> make
-#After that -> ./elevator
+#*Building Instructions:
+#On the terminal type -> cmake .
+#Then type -> make
+#After that, to execute it, type -> ./elevator
 
 add_executable( elevator
                 Elevator_main.cpp
                 Elevador.hpp )
+#Honestly, building using g++ seems a lot simpler, but the teacher asked me to use Cmake so here you have it...
