--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
         "stdio.h": "c",
         "string.h": "c",
         "iostream": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "${workspaceFolder}/C++/Livros",
+    "cmake.configureOnOpen": true
 }
