Moved all Cmake related codes into the "CMake codes" folder.

--- a/C++/CMake codes/Livros/CMakeLists.txt
+++ b/C++/CMake codes/Livros/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.22.1)
 project(teste VERSION 0.1 LANGUAGES CXX )
 
-#Building Instructions:
+include_directories( include )
+
+#Building Instructions for Bash/WSL:
 #On the terminal type -> cmake .
 #Then type -> make
-#After that, to execute it, type -> ./elevator
+#After that, to execute it, type -> ./livros
 
 add_executable( livros
-                livros_main.cpp
-                livros.hpp )
+                src/livros_main.cpp )
