--- a/C++/CMake codes/Elevador/CMakeLists.txt
+++ b/C++/CMake codes/Elevador/CMakeLists.txt
@@ -3,7 +3,7 @@ project(teste VERSION 0.1 LANGUAGES CXX )
 
 include_directories( include )
 
-#*Building Instructions:
+#Building Instructions for Bash/WSL:
 #On the terminal type -> cmake .
 #Then type -> make
 #After that, to execute it, type -> ./elevator
