--- a/C++/CMake codes/Funcionário/CMakeLists.txt
+++ b/C++/CMake codes/Funcionário/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.22.1)
 project(teste VERSION 0.1 LANGUAGES CXX )
 
-#Building Instructions:
+include_directories( include )
+
+#Building Instructions for Bash/WSL:
 #On the terminal type -> cmake .
 #Then type -> make
-#After that, to execute it, type -> ./elevator
+#After that, to execute it, type -> ./funcionario
 
 add_executable( funcionario
-                Funcionario_main.cpp
-                Funcionario.hpp )
+                src/Funcionario_main.cpp )
