Renamed main file to main.cpp

--- a/C++/CMake codes/Elevador/CMakeLists.txt
+++ b/C++/CMake codes/Elevador/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories( include )
 #After that, to execute it, type -> ./elevator
 
 add_executable( elevator
-                src/Elevator_main.cpp )
+                src/main.cpp )
 #Honestly, building using g++ seems a lot simpler, but the teacher asked me to use Cmake so here you have it...
 
 #05/04/2023 update, after using Windows to program, I now understand why to use Cmake... Thanks teach.
