--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "stdio.h": "c",
         "string.h": "c",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "ostream": "cpp"
     },
     "cmake.sourceDirectory": "${workspaceFolder}/C++/Livros",
     "cmake.configureOnOpen": true
